--- a/copy2/packages.config
+++ b/copy2/packages.config
@@ -1,5 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HttpMultipartParser" version="5.0.0" targetFramework="net472" />
+  <package id="jose-jwt" version="3.1.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.11.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.11.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.11.1" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.3.6" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Pathoschild.Http.FluentClient" version="4.1.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.11.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
