--- a/copy2/copy2.csproj
+++ b/copy2/copy2.csproj
@@ -108,6 +108,8 @@
     <Reference Include="Pathoschild.Http.Client, Version=4.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Pathoschild.Http.FluentClient.4.1.0\lib\net45\Pathoschild.Http.Client.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System">
       <HintPath>..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
     </Reference>
@@ -149,6 +151,7 @@
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -158,20 +161,11 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="fCambiarName.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="fCambiarName.Designer.cs">
-      <DependentUpon>fCambiarName.cs</DependentUpon>
-    </Compile>
-    <Compile Include="fEditar.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="fEditar.Designer.cs">
-      <DependentUpon>fEditar.cs</DependentUpon>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,12 +180,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="fCambiarName.resx">
-      <DependentUpon>fCambiarName.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="fEditar.resx">
-      <DependentUpon>fEditar.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
