--- a/copy2/copy2.csproj
+++ b/copy2/copy2.csproj
@@ -196,6 +196,12 @@
     <Compile Include="fConf.Designer.cs">
       <DependentUpon>fConf.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -203,6 +209,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fConf.resx">
       <DependentUpon>fConf.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
